@@ -40,21 +40,21 @@ import urllib2
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-10817.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-10840.tgz',
      'xapian-core.tgz',
-     '29c79389605748901f4be721169335c286da4524',
+     '168bfd897a9c439c923af6ec215324596c004c5a',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-10817.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-10840.tgz',
      'xapian-bindings.tgz',
-     '990948589823f70a1549b122fe4e2cd72f15b169',
+     '8a5278dccb0c575561177ea9ef8833b628d7c3f3',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-10817.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-10840.tgz',
      'win32msvc.tgz',
-     'fbb5c30b7639b6a214cdcc21fde2bf826313df5e',
+     '66f3c6c741bc6c786b0813428d618ef0ca55d45b',
      'xapian-core/win32',
     ),
 )
